src/objects/MICO_User_Story_Approval_History__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>As_A_text__c</fullName>
        <label>As A...</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Quality_Allocated_Time_In_Days__c</fullName>
        <formula>ROUND(IF( Business_Quality_Approved__c  ,  ( Business_Quality_Approval_Date__c - CreatedDate ) ,(NOW() - CreatedDate )),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Quality Allocated Time In Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Quality_Approval_Date__c</fullName>
        <label>Business Quality Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Business_Quality_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Quality Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Quality_Comments__c</fullName>
        <label>Business Quality Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Quality</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Story_Approval_History2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Computer_Systems_Allocated_Time_In_Days__c</fullName>
        <formula>ROUND(IF( Computer_Systems_Quality_Approved__c  ,  ( Computer_Systems_Qty_Approval_Date__c - CreatedDate ) ,(NOW() - CreatedDate )),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Computer Systems Allocated Time In Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Computer_Systems_Qty_Approval_Date__c</fullName>
        <label>Computer Systems Quality Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Computer_Systems_Quality_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Computer Systems Quality Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Computer_Systems_Quality_Comments__c</fullName>
        <label>Computer Systems Quality Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Computer_Systems_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Computer Systems Quality</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Story_Approval_History3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>I_Want_To__c</fullName>
        <label>I Want To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>So_that__c</fullName>
        <label>So that</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>System_Custodian_Allocated_Time_In_Days__c</fullName>
        <formula>ROUND(IF( System_Custodian_Approved__c  ,  ( System_Custodian_Approval_Date__c - CreatedDate ) ,(NOW() - CreatedDate )),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Custodian Allocated Time In Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Custodian_Approval_Date__c</fullName>
        <label>System Custodian Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>System_Custodian_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Custodian Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Custodian_Comments__c</fullName>
        <label>System Custodian Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>System_Custodian__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Custodian</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Story_Approval_History1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Owner_Allocated_Time_In_Days__c</fullName>
        <formula>ROUND(IF( System_Owner_Approved__c  ,  ( System_Owner_Approval_Date__c - CreatedDate ) ,(NOW() - CreatedDate )),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Owner Allocated Time In Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Owner_Approval_Date__c</fullName>
        <label>System Owner Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>System_Owner_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Owner Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Owner_Comments__c</fullName>
        <label>System Owner Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>System_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Story_Approval_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>MICO_User_Story__c</referenceTo>
        <relationshipLabel>User Story Approval History</relationshipLabel>
        <relationshipName>User_Story_Approval_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>User Story Approval History</label>
    <nameField>
        <displayFormat>USA-{0000}</displayFormat>
        <label>User Story Approval History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Story Approval History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>